Wstępne wyświetlanie aktywności na mapie

--- a/app/index.html
+++ b/app/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="googleMaps">
           <div id="googleMaps" class="googleMaps__API">
-            <ng-map center="[{{lat}}, {{lng}}]" zoom="14" refresh="true" styles="[{featureType:'landscape',stylers:[{saturation: -100},{lightness: 65},{visibility: 'on'}]},{featureType: 'poi',stylers: [{saturation: -100},{lightness: 51},{visibility: 'simplified'}]},{featureType: 'road.highway',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'road.arterial',stylers: [{saturation: -100},{lightness: 30},{visibility: 'on'}]},{featureType: 'road.local',stylers: [{saturation: -100},{lightness: 40},{visibility: 'on'}]},{featureType: 'transit',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'administrative.province',stylers: [{visibility: 'off'}]},{featureType: 'water',elementType: 'labels',stylers: [{visibility: 'on'},{lightness: -25},{saturation: -100}]},{featureType: 'water',elementType: 'geometry',stylers: [{hue: '#ffff00'},{lightness: -25},{saturation: -97}]}]" pan-control="false" map-type-control="true" map-type-control-options="{style:'HORIZONTAL_BAR', position:'RIGHT_BOTTOM'}" zoom-control="true" zoom-control-options="{style:'LARGE', position:'RIGHT_CENTER'}" street-view-control="false" scale-control="false" tilt="45" id="foo">
+            <ng-map center="[{{lat}}, {{lng}}]" zoom="14" refresh="true" styles="[{featureType:'landscape',stylers:[{saturation: -100},{lightness: 65},{visibility: 'on'}]},{featureType: 'poi',stylers: [{saturation: -100},{lightness: 51},{visibility: 'simplified'}]},{featureType: 'road.highway',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'road.arterial',stylers: [{saturation: -100},{lightness: 30},{visibility: 'on'}]},{featureType: 'road.local',stylers: [{saturation: -100},{lightness: 40},{visibility: 'on'}]},{featureType: 'transit',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'administrative.province',stylers: [{visibility: 'off'}]},{featureType: 'water',elementType: 'labels',stylers: [{visibility: 'on'},{lightness: -25},{saturation: -100}]},{featureType: 'water',elementType: 'geometry',stylers: [{hue: '#ffff00'},{lightness: -25},{saturation: -97}]}]" pan-control="false" map-type-control="true" map-type-control-options="{style:'HORIZONTAL_BAR', position:'RIGHT_BOTTOM'}" zoom-control="true" zoom-control-options="{style:'LARGE', position:'RIGHT_CENTER'}" street-view-control="false" scale-control="false" tilt="45">
               <info-window id="myInfoWindow">
                 <div ng-non-bindable class="googleMaps__API__infoWindow">
                   <h4>{{selectedBusstop.Name}}</h4>
@@ -140,6 +140,19 @@
               <!--Markery przystanków-->
               <marker ng-repeat="b in busstopMarker" position="{{b.Position}}" id="{{b.Id}}" on-click="showBusstop(event, b)" icon="{{markerIcon}}"></marker>
               <directions ng-show="czyWyswietloneD1" draggable="false" travel-mode="DRIVING" waypoints="{{wayPoints}}" origin="{{origin}}" destination="{{destination}}" suppress-markers="true"></directions>
+              <!--Markery aktywnosci-->
+              <marker ng-repeat="a in activityMarker" position="{{a.Position}}" id="{{a.Id}}" on-click="showActivity(event, a)"></marker>
+              <info-window id="ActivityInfoWindow">
+                <div ng-non-bindable class="googleMaps__API__infoWindow">
+                  <h4>{{selectedActivity.Name}}</h4>
+                  <table>
+                    <tr>
+                      <td>Numer Autobusu</td>
+                      <td>{{selectedActivity.BusName}}</td>
+                    </tr>
+                  </table>
+                </div>
+              </info-window>
             </ng-map>
           </div>
         </div>
