--- a/app/panelDodajTrase.html
+++ b/app/panelDodajTrase.html
@@ -8,7 +8,13 @@
     <div ng-controller="AddTrackController" class="panelDodajTrase">
       <div ng-show="BrakPrzystankow" class="panelDodajTrase__alert">Prosze wybrac jakis przystanek!</div>
       <div ng-hide="DodanoTrase" class="panelDodajTrase__title">Nazwa Przystanku</div>
-      <input type="text" ng-model="LineNumber" ng-hide="DodanoTrase"/>
+      <form name="form">
+        <div ng-hide="sendForm" class="panelDodajPrzystanek__content__form">
+          <div class="panelDodajPrzystanek__content__form__item">
+            <input type="number" ng-model="LineNumber" placeholder="Numer trasy" ng-hide="DodanoTrase"/>
+          </div>
+        </div>
+      </form>
       <div ng-hide="DodanoTrase" class="panelDodajTrase__columns">
         <div class="panelDodajTrase__column">
           <div class="panelDodajTrase__title">Dostępne przystanki</div>
