--- a/app/panelPrzystanki.html
+++ b/app/panelPrzystanki.html
@@ -58,7 +58,10 @@
             <td>{{przystanek.BusStopTypeName}}</td>
             <td>{{przystanek.GotMachineName}}</td>
             <td>{{przystanek.GotKioskName}}</td>
-            <td><a href="" ng-click="setPostitionBusstop(przystanek.Id)" class="navigation"><i class="ionicons ion-ios-location"></i></a><a href="/#/busstop/show/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/#/busstop/delete/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td>
+            <td><a href="" ng-click="setPostitionBusstop(przystanek.Id)" class="navigation"><i class="ionicons ion-ios-location">
+                  <div class="tool-tip left">Pokaż na mapie</div></i></a><a href="/#/busstop/show/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-settings tooltips">
+                  <div class="tool-tip left">Wyświetl przystanek</div></i></a><a href="/#/busstop/delete/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red tooltips">
+                  <div class="tool-tip left">Dezaktywuj przystanek</div></i></a></td>
           </tr>
           <tr ng-hide="filtrowanePrzystanku.length">
             <td colspan="6" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td>
@@ -88,7 +91,9 @@
             <td>{{przystanek.GotKioskName}}</td>
             <td>
               <!--a(href="").navigation-->
-              <!--  i.ionicons.ion-ios-location--><a href="/#/busstop/show/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/#/busstop/restore/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-android-add-circle -green"></i></a>
+              <!--  i.ionicons.ion-ios-location--><a href="/#/busstop/show/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-settings">
+                  <div class="tool-tip left">Wyświetl przystanek</div></i></a><a href="/#/busstop/restore/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-android-add-circle -green">
+                  <div class="tool-tip left">Aktywuj przystanek</div></i></a>
             </td>
           </tr>
           <tr ng-hide="filtrowanePrzystankuNieaktywe.length">
