--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
                       <div class="header__buttonIcon fa fa-road"></div></span>Trasy</span></a></li>
               <li class="header__item"><a href="#/user"><span class="header__button"><span class="header__buttonIconBG">
                       <div class="header__buttonIcon fa fa-users"></div></span>Użytkownicy</span></a></li>
-              <li class="header__item"><a href="#/controls"><span class="header__button"><span class="header__buttonIconBG">
+              <li ng-hide="true" class="header__item"><a href="#/controls"><span class="header__button"><span class="header__buttonIconBG">
                       <div class="header__buttonIcon fa fa-eye"></div></span>Kontrole</span></a></li>
             </ul>
           </div>
@@ -79,7 +79,7 @@
                       <div class="headerProfile__buttonIcon fa fa-power-off"></div></span>Logowanie</span></a></li>
               <li ng-hide="globals.UserIsLogin" class="headerProfile__item"><a href="/#/register"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                       <div class="headerProfile__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></a></li>
-              <li ng-hide="globals.UserIsLogin" class="headerProfile__item"><a href="/#/forgot"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+              <li ng-hide="true" class="headerProfile__item"><a href="/#/forgot"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                       <div class="headerProfile__buttonIcon fa fa-key"></div></span>Odzyskaj konto</span></a></li>
               <li ng-hide="globals.HeaderToHide" class="headerProfile__item"><a href="/#/myaccount"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                       <div class="headerProfile__buttonIcon fa fa-user"></div></span>Moje Konto</span></a></li>
