--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,7 @@
                       <div class="headerProfile__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></a></li>
               <li ng-hide="true" class="headerProfile__item"><a href="/#/forgot"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                       <div class="headerProfile__buttonIcon fa fa-key"></div></span>Odzyskaj konto</span></a></li>
-              <li ng-hide="globals.HeaderToHide" class="headerProfile__item"><a href="/#/myaccount"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+              <li ng-hide="true" class="headerProfile__item"><a href="/#/myaccount"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                       <div class="headerProfile__buttonIcon fa fa-user"></div></span>Moje Konto</span></a></li>
               <li class="headerProfile__item"><a href="/#/info"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                       <div class="headerProfile__buttonIcon fa fa-info-circle"></div></span>Informacje</span></a></li>
