--- a/app/home.html
+++ b/app/home.html
@@ -3,6 +3,15 @@
   <div class="panelAutobusy__title">HOME</div>
   <div class="panelAutobusy__fastTravel"><span class="-active"><a href="#/"><i class="fa fa-home"></i>Home</a></span></div>
   <div class="panelAutobusy__wrapper">
-    <div class="panelAutobusy__subtitle">Witaj w naszym systemie &nbsp;<span ng-show="globals.UserIsLogin">{{userName}}</span><span ng-hide="globals.UserIsLogin">&nbsp {{userName}} Jestes nie zalogowany, lepiej zrób to jak najszybciej.</span></div>
+    <div class="panelAutobusy__subtitle">Witaj w naszym systemie &nbsp;<span ng-show="globals.UserIsLogin">{{userName}}</span><span ng-hide="globals.UserIsLogin">&nbsp {{userName}} Jestes nie zalogowany, lepiej zrób to jak najszybciej.</span></div><br/><span class="panelWelcome__buttonIconBG">
+      <div class="panelWelcome__buttonIcon fa fa-bus"></div></span>
+    <div class="panelWelcome__title">Witaj w systemie MPK</div>
+    <div class="panelDodajUser__text">System monitorowania i zarządzania flotą autobusów obejmuje cały tabor zarządzany przez MPK. Dostarcza informacji o stanie i aktualnym położeniu pojazdów.<br/><br/><b>Główne funkcjonalności:</b>
+      <ul>
+        <li>* Zarządzanie flotą autobusów</li>
+        <li>* Monitorowanie stanu i położenia pojazdów w czasie rzeczywitym</li>
+        <li>* Zgłaszanie incydentów zaistniałych w trakcie kursów</li>
+      </ul>
+    </div>
   </div>
 </div>
