--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
             <div class="panelWelcome__wrapper"><span class="panelWelcome__buttonIconBG">
                 <div class="panelWelcome__buttonIcon fa fa-bus"></div></span>
               <div class="panelWelcome__title">Witaj w systemie MPK</div>
-              <div class="panelWelcome__text">Projekt zespołowy.</div>
+              <div class="panelWelcome__text">Projekt zespołowy</div>
             </div>
             <div class="panelWelcome__navigation">
               <!--<a href="#" style="display:block;">Link #01</a>--><a href="#/login" class="WelcomeClick blue">Logowanie</a><a href="#/register" class="WelcomeClick green">Rejestracja</a>
