--- a/app/panelDodajAutobus.html
+++ b/app/panelDodajAutobus.html
@@ -43,8 +43,10 @@
             </path>
           </svg>
         </div>
-        <div class="panelDodajAutobus__dataLoader__text">
-          <p ng-hide="CallbackServera">{{ message }}</p><a href="#/bus" ng-show="CallbackServeraPositive" class="panelDodajAutobus__navigation__item green"><i class="fa fa-check"></i>&nbsp;Autobus został dodany pomyślnie!</a><a href="#/bus" ng-show="CallbackServeraNegative" class="panelDodajAutobus__navigation__item red"><i class="fa fa-reply"></i>&nbsp;Coś poszło nie tak...</a>
+        <div class="panelAutobusy__dataLoader__text">
+          <p ng-hide="CallbackServera">{{ message }}</p><a href="#/bus" ng-show="CallbackServeraPositive" class="panelPrzystanki__text success">
+            <div class="panelAutobusy success__text__icon"><i class="fa fa-smile-o"></i></div>Autbus został dodany pomyślnie</a><a href="#/bus/add" ng-show="CallbackServeraNegative" class="panelPrzystanki__text error">
+            <div class="panelAutobusy success__text__icon"><i class="fa fa-frown-o"></i></div>Coś poszło nie tak...</a>
         </div>
       </div>
     </form>
