--- a/app/panelWyswietlAutobus.html
+++ b/app/panelWyswietlAutobus.html
@@ -64,8 +64,10 @@
             </path>
           </svg>
         </div>
-        <div class="panelDodajAutobus__dataLoader__text">
-          <p ng-hide="CallbackServera">{{ message }}</p><a href="/#/bus" ng-show="CallbackServeraPositive" class="panelDodajAutobus__navigation__item green">Autobus został zaktualizowany pomyślnie!</a><a href="/#/bus/" ng-show="CallbackServeraNegative" class="panelDodajAutobus__navigation__item red">Coś poszło nie tak...</a>
+        <div class="panelAutobusy__dataLoader__text">
+          <p ng-hide="CallbackServera">{{ message }}</p><a href="#/bus" ng-show="CallbackServeraPositive" class="panelPrzystanki__text success">
+            <div class="panelAutobusy success__text__icon"><i class="fa fa-smile-o"></i></div>Autobus został zaktualizowany pomyślnie!</a><a href="#/bus" ng-show="CallbackServeraNegative" class="panelPrzystanki__text error">
+            <div class="panelAutobusy success__text__icon"><i class="fa fa-frown-o"></i></div>Coś poszło nie tak...</a>
         </div>
       </div>
     </form>
