--- a/app/home.html
+++ b/app/home.html
@@ -1,6 +1,6 @@
 
 <div ng-controller="HomeController" class="panelAutobusy">
-  <div class="panelAutobusy__title">HOME</div>
+  <div class="panelAutobusy__title">Informacje</div>
   <div class="panelAutobusy__fastTravel"><span class="-active"><a href="#/"><i class="fa fa-home"></i>Home</a></span></div>
   <div class="panelAutobusy__wrapper">
     <div class="panelAutobusy__subtitle">Witaj w naszym systemie &nbsp;<span ng-show="globals.UserIsLogin">{{userName}}</span><span ng-hide="globals.UserIsLogin">&nbsp {{userName}} Jestes nie zalogowany, lepiej zrób to jak najszybciej.</span></div><br/><span class="panelWelcome__buttonIconBG">
